--- a/css/Stylesheet.css
+++ b/css/Stylesheet.css
@@ -1,6 +1,7 @@
 html {
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
+  background-color: black;
 }
 body {
   margin: 0;
@@ -55,7 +56,7 @@ input[type=submit]:hover {
   text-align: left;
 }
 .background {
-  background-image: url("Images/stars.png");
+  background-image: url("../Images/stars.png");
   /* Set a specific height */
 
   /* Create the parallax scrolling effect */
