--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,7 @@
+a:hover {
+  text-decoration: none;
+}
+
 @media screen and (max-width: 1100px) {
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
